fix: reduce z-index for megamenu

--- a/app/design/frontend/Devmy/nextouch/Amasty_MegaMenuLite/web/css/source/_extend.less
+++ b/app/design/frontend/Devmy/nextouch/Amasty_MegaMenuLite/web/css/source/_extend.less
@@ -4,7 +4,7 @@
 
 & when (@media-common = true) {
     .ammenu-header-container.page-header {
-        z-index: 99999;
+        z-index: 10;
     }
 }
 
@@ -15,7 +15,7 @@
 
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
     .ammenu-header-container.page-header {
-        z-index: 99999;
+        z-index: 10;
         background-color: @color-transparent;
     }
 }
