--- a/app/design/frontend/Devmy/nextouch/Magento_Theme/web/css/source/_module.less
+++ b/app/design/frontend/Devmy/nextouch/Magento_Theme/web/css/source/_module.less
@@ -60,7 +60,7 @@
         min-height: 100vh; // Stretch content area for sticky footer
       .ammenu-menu-wrapper{
         background-color: @color-transparent;
-        z-index: 99999;
+        z-index: 5;
         .ammenu-link{
 
         }
